@@ -1,2 +1,2 @@
-#define VERSION "20180217"
+#define VERSION "20180223"
 #define BUG_ADDRESS "issue@texjp.org"
